Fix T65317: crash applying wave modifier with texture